<resources>
    <string name="app_name">Sparky</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="password_rule">영문 / 숫자 포함 8~20자</string>
    <string name="login">로그인</string>
    <string name="email_sign_up">이메일 회원가입</string>
    <string name="password_find">비밀번호 찾기</string>
    <string name="sign_up">회원가입</string>
    <string name="email_input_request">이메일을 입력해주세요</string>
    <string name="email_fail">올바르지 않은 이메일 형식입니다</string>
    <string name="get_certification">인증메일 받기</string>
    <string name="input_certification_num">이메일 인증번호를 입력해주세요</string>
    <string name="certification_fail">올바르지 않은 인증 번호입니다</string>
    <string name="next">다음</string>
    <string name="password_input_request">비밀번호를 입력해주세요</string>
    <string name="password_fail">올바르지 않은 비밀번호 형식입니다.</string>
    <string name="name_input_request">닉네임을 입력해주세요</string>
    <string name="name_rule">한글, 영어, 숫자로 2~16글자</string>
    <string name="name_fail">특수문자는 사용할 수 없습니다.</string>
    <string name="sign_up_success">회원가입이 완료되었어요</string>
    <string name="sign_up_success2">이제 로그인하여 Sparky를 이용해보세요</string>
    <string name="scrap_store">스크랩 저장</string>
    <string name="tag_setting">추천할 태그</string>
    <string name="memo">메모</string>
    <string name="memo_input_request">메모를 입력하세요</string>
    <string name="store">저장하기</string>
    <string name="tag_add_title">태그추가</string>
    <string name="tag_input_request">검색할 태그를 입력해주세요 (최대 7글자)</string>
    <string name="none_search_result">검색결과가 없어요</string>
    <string name="new_tag_add">새 태그 생성하기</string>
    <string name="tag_text">태그 컬러는 <b>마이페이지>태그 목록</b>에서 변경할 수 있어요</string>
    <string name="tag_add">태그추가</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag">태그</string>
    <string name="scrap_detail_title">스크랩 상세</string>
    <string name="modify">수정하기</string>
    <string name="share">공유하기</string>
    <string name="url_copy">URL 복사하기</string>
    <string name="delete">삭제하기</string>
    <string name="scrap_add">내 스크랩에 추가하기</string>
    <string name="scrap_add_dialog_title">스크랩 추가</string>
    <string name="scrap_url">스크랩 URL</string>
    <string name="url_hint">URL주소를 입력해주세요</string>
    <string name="get_url">불러오기</string>
    <string name="my_page">마이페이지</string>
    <string name="withdraw">탈퇴하기</string>
    <string name="profile_share">프로필 공유하기</string>
    <string name="logout">로그아웃</string>
    <string name="setting">서비스 환경 설정</string>
    <string name="my_tag_list">내 태그 목록</string>
    <string name="profile_setting">프로필 설정</string>
    <string name="input_require_search">검색어를 입력해주세요</string>

</resources>