<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.my_page.MyPageActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:paddingHorizontal="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp">

    <ImageView
        android:id="@+id/my_page_img_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_page"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

<de.hdodenhof.circleimageview.CircleImageView
    android:layout_marginTop="45dp"
    android:layout_marginBottom="12dp"
    android:id="@+id/my_page_img"
    android:layout_gravity="center_horizontal"
    android:layout_width="84dp"
    android:layout_height="84dp"
    android:src="@color/gray_400"/>

<TextView
    android:layout_marginBottom="36dp"
    android:id="@+id/my_page_txt_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="14sp"
    android:textColor="@color/black"
    android:textStyle="bold"/>

<LinearLayout
    android:layout_marginHorizontal="20dp"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/sign_input_normal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_setting"/>
        <ImageView
            android:layout_width="5dp"
            android:layout_height="9dp"
            android:src="@drawable/ic_arrow"/>
    </LinearLayout>

    <View
        android:layout_marginVertical="12dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:background="@color/gray_300"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/my_tag_list"/>
        <ImageView
            android:layout_width="5dp"
            android:layout_height="9dp"
            android:src="@drawable/ic_arrow"/>
    </LinearLayout>

    <View
        android:layout_marginVertical="12dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:background="@color/gray_300"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/setting"/>
        <ImageView
            android:layout_width="5dp"
            android:layout_height="9dp"
            android:src="@drawable/ic_arrow"/>
    </LinearLayout>
</LinearLayout>

<LinearLayout
    android:layout_marginTop="12dp"
    android:layout_marginHorizontal="20dp"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/sign_input_normal">
    <TextView
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="고객센터"/>

    <View
        android:layout_marginVertical="12dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:background="@color/gray_300"/>

    <TextView
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_share"/>

    <View
        android:layout_marginVertical="12dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:background="@color/gray_300"/>

    <TextView
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"/>
</LinearLayout>

<LinearLayout
    android:layout_marginTop="12dp"
    android:layout_marginHorizontal="20dp"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/sign_input_normal">
    <TextView
        android:textColor="@color/sparky_orange"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdraw"/>
</LinearLayout>


</LinearLayout>