<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@drawable/bottom_dialog_background"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginVertical="21dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/scrap_add_bottom_dialog_img_back_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scrap_add_dialog_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scrap_url"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/scrap_add_bottom_dialog_edit_txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_input_selector"
        android:hint="@string/url_hint"
        android:inputType="textEmailAddress"
        android:paddingVertical="15dp"
        android:paddingStart="18dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/scrap_add_bottom_dialog_txt_validation"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="스크랩 정보를 가져올 수 없습니다"
        android:textColor="@color/sparky_orange"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/scrap_add_bottom_dialog__btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:enabled="false"
        android:text="@string/get_url"
        android:textStyle="bold"
        android:paddingVertical="15dp"
        android:layout_marginBottom="41dp"
        android:textColor="@color/white"/>


</LinearLayout>

