<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.detail.MyScrapDetailActivity">

<androidx.core.widget.NestedScrollView
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:scrollbars="none"
    android:layout_marginBottom="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <ImageView
                android:id="@+id/my_scrap_detail_img_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scrap_detail_title"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/my_scrap_detail_txt_modify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify"
                android:textColor="@color/sparky_blue"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/template_background"
            android:orientation="horizontal"
            android:padding="12dp"
            >

            <ImageView
                android:layout_marginTop="5dp"
                android:layout_gravity="top"
                android:id="@+id/my_scrap_detail_img_thumbnail"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginRight="14dp" />

            <LinearLayout
                android:layout_gravity="top"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/my_scrap_detail_edit_txt_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@null"
                    android:gravity="top"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/my_scrap_detail_txt_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ellipsize="end"
                    android:gravity="top"
                    android:maxLines="2"
                    android:textSize="12sp" />
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="16dp"
            android:background="@color/gray_200" />

        <TextView
            android:id="@+id/my_scrap_detail_txt_tags_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/tag"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_scrap_detail_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/my_scrap_detail_memo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/memo"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/my_scrap_detail_edit_txt_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/sign_input_selector"
            android:gravity="top"
            android:enabled="false"
            android:minHeight="100dp"
            android:textColor="@color/black"
            android:padding="12dp"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginBottom="15dp"
            android:background="@color/gray_300"/>

        <LinearLayout
            android:layout_marginTop="18dp"
            android:layout_marginHorizontal="20dp"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/sign_input_normal">
            <TextView
                android:id="@+id/my_scrap_detail_txt_share"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"/>

            <View
                android:layout_marginVertical="12dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:background="@color/gray_300"/>

            <TextView
                android:id="@+id/my_scrap_detail_txt_url_copy"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url_copy"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="20dp"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/sign_input_normal">
            <TextView
                android:id="@+id/my_scrap_detail_txt_url_delete"
                android:textColor="@color/sparky_orange"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"/>
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>

<Button
    android:visibility="gone"
    android:layout_marginBottom="20dp"
    android:id="@+id/my_scrap_detail_btn_store"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="32dp"
    android:background="@drawable/button"
    android:paddingVertical="15dp"
    android:text="@string/store"
    android:textColor="@color/white"
    android:textStyle="bold" />

</LinearLayout>
